<resources>
    <string name="app_name">WorkLocation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="go_to_the_list_of_rooms">Go to the list of rooms</string>
    <string name="go_to_the_map">Go to the map</string>
    <string name="go_to_the_statistic">Go to the statistic</string>
    <string name="photo">Photo</string>
    <string name="is_online">Is online?</string>
    <string name="why">Why do you need those permissions?</string>
    <string name="WhyMessage">Поскольку приложение завязано на геолокации, без него приложение не будет работать корректно. И не волнуйтесь, данные о вашем местоположении нигде не будут сохраняться)</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="it_is_delete_button">It is delete button</string>
    <string name="it_is_add_button">It is add button</string>
    <string name="it_is_edit_button">It is edit button</string>
    <string name="sure_delete_m">Are you sure you want to delete this member?</string>
    <string name="sure_delete_g">Are you sure you want to delete this group?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="member">Member</string>
    <string name="group">Group</string>
    <string name="your_group_name">Your Group name</string>
    <string name="add">Add</string>
    <string name="ok1">Ok</string>
    <string name="exit">Exit</string>
    <string name="copy">Copy</string>
    <string name="paste_here_group_id">Paste here group id</string>
    <string name="paste_here_member_id">Paste here member id</string>
    <string name="your_id_was_copied">Your id was copied</string>
    <string name="theres_a_limit_to_100_groups">There\'s a limit to 100 groups</string>
    <string name="your_last_known_location_wasnt_defined">Your last known location wasn\'t defined</string>
    <string name="get_my_id">My Id</string>
    <string name="create_group">Create Group…</string>
    <string name="add_group">Add Group…</string>
    <string name="add_member">Add Member…</string>
    <string name="next">next</string>
    <string name="image_lock">image lock</string>
    <string name="geolocation_icon">geolocation icon</string>
    <string name="logo_picture">logo picture</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="oops_your_inernet_is_dead">Oops, your inernet is DEAD...</string>
    <string name="internet_is_dead">internet is dead</string>
</resources>
