<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".groupsFragment.GroupsFragment">

    <LinearLayout
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_grey_to_white"
        android:layout_above="@id/fragment_room_buttons_block">
        <ExpandableListView
            android:id="@+id/fragment_group_expendable_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_white">
        </ExpandableListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_room_buttons_block"
        android:layout_margin="@dimen/margin18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <ImageButton
            android:id="@+id/fragment_group_delete_button"
            android:src="@drawable/delete_grey_48dp"
            android:layout_marginEnd="@dimen/margin18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/it_is_delete_button" />
        <ImageButton
            android:id="@+id/fragment_group_add_button"
            android:src="@drawable/add_grey_48dp"
            android:layout_marginLeft="@dimen/margin18dp"
            android:layout_marginRight="@dimen/margin18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/it_is_add_button" />
        <ImageButton
            android:id="@+id/fragment_group_edit_button"
            android:src="@drawable/edit_grey_48dp"
            android:layout_marginStart="@dimen/margin18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:contentDescription="@string/it_is_edit_button" />
    </LinearLayout>


</RelativeLayout>